Bug 169438 - FILESAVE: PPT -> PPTX improper export of audio in animations.
Summary: FILESAVE: PPT -> PPTX improper export of audio in animations.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Karthik
URL:
Whiteboard: target:26.2.0 target:25.8.4
Keywords:
Depends on:
Blocks: PPTX-Corrupted Media PPTX-Animations
  Show dependency treegraph
 
Reported: 2025-11-14 10:49 UTC by Karthik
Modified: 2025-12-03 15:01 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
PPT file (137.50 KB, application/vnd.ms-powerpoint)
2025-11-14 10:50 UTC, Karthik
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Karthik 2025-11-14 10:49:56 UTC
Description:
Open the attached file and save it as PPTX. Open the resulting file in PowerPoint. PowerPoint fails to open the file.

Both officeotron and OOXML validator doesn't give any errors.

If we initially save the file in PowerPoint and roundtrip it in LO, it opens without any problem in PowerPoint.

The issue seems to be with additional export of audio in animations.
If we unzip the pptx file saved in LO and look at the formatted slide1.xml, in animations we have the below xml
```
<p:audio isNarration="0">
  <p:cMediaNode showWhenStopped="1">
    <p:cTn/>
    <p:tgtEl>
      <p:sndTgt r:embed="rId1" name="wind.wav"/>
    </p:tgtEl>
  </p:cMediaNode>
</p:audio>
```

This audio element is not attached to any valid node. If we remove this part from the XML and rezip it, the resulting file opens without any problem in PowerPoint

Steps to Reproduce:
1.Save the attached in as PPTX
2.Open the resulting file in PowerPoint
3.PowerPoint fails to open the file

Actual Results:
PowerPoint opens the file without any issues

Expected Results:
PowerPoint fails to open the file


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 25.2.3.2 (X86_64) / LibreOffice Community
Build ID: 520(Build:2)
CPU threads: 22; OS: Linux 6.12; UI render: default; VCL: gtk3
Locale: en-IN (en_IN); UI: en-US
Debian package version: 4:25.2.3-2+deb13u2
Calc: threaded
Comment 1 Karthik 2025-11-14 10:50:48 UTC
Created attachment 203973 [details]
PPT file
Comment 2 Commit Notification 2025-11-20 15:01:39 UTC
Karthik Godha committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b8eb27b3b087dc1952c8f72d37519c2345770a33

tdf#169438: Fix PPT->PPTX audio in animations

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2025-11-24 09:06:08 UTC
Karthik Godha committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/eea3114b44d5caf664522101e41e7096b6d6f208

tdf#169438: Fix PPT->PPTX audio in animations

It will be available in 25.8.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2025-11-28 13:53:17 UTC Comment hidden (obsolete)
Comment 5 Commit Notification 2025-11-28 20:07:59 UTC Comment hidden (obsolete)
Comment 6 Aron Budea 2025-11-29 17:05:30 UTC
Oh, I mixed up the bug report reference in my commits, those were for bug 169706, a somewhat similar, but different issue.