tdf#169438: Fix PPT->PPTX audio in animations

Don't export audio in animations which are not in use.

Change-Id: I7c5f4e90b36d0c0104a95958c5508dc6b24b2a00
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/194018
Reviewed-by: Michael Stahl <michael.stahl@collabora.com>
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>